--- a/Computation_time.ipynb
+++ b/Computation_time.ipynb
@@ -3,7 +3,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Computation time comparison fooof vs IRASA"
+    "# Computation time comparison fooof vs IRASA\n",
+    "Tested on September 22nd 2021"
    ],
    "metadata": {}
   },
@@ -67,8 +68,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### IRASA at default parameters\n",
-    "13.0 +- 0.3 seconds (September 22nd 2021)"
+    "#### IRASA at default parameters: 13.0 +- 0.3 seconds"
    ],
    "metadata": {}
   },
@@ -92,8 +92,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### IRASA does not slow down if spectral resolution is decreased\n",
-    "13.1 +- 0.3 seconds (September 22nd 2021)"
+    "#### IRASA does not slow down if spectral resolution is decreased: 13.1 +- 0.3 seconds"
    ],
    "metadata": {}
   },
@@ -117,7 +116,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### IRASA does not slow down if spectral resolution is increased: 12.3 +- 0.6 seconds (September 22nd 2021)"
+    "#### IRASA does not slow down if spectral resolution is increased: 12.3 +- 0.6 seconds"
    ],
    "metadata": {}
   },
@@ -141,7 +140,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### IRASA slows down if number of hset is increased: 59.4 +- 1.2 seconds (September 22nd 2021)"
+    "#### IRASA slows down if number of hset is increased: 59.4 +- 1.2 seconds"
    ],
    "metadata": {}
   },
@@ -165,7 +164,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### IRASA slows down if values of hset is increased: 64 +- 2 seconds (September 22nd 2021)"
+    "#### IRASA slows down if values of hset is increased: 64 +- 2 seconds"
    ],
    "metadata": {}
   },
@@ -189,7 +188,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### Fooof is fast even if psd calculation is included: 269 +- 2 miliseconds (September 22nd 2021)"
+    "#### Fooof is fast even if psd calculation is included: 269 +- 2 miliseconds"
    ],
    "metadata": {}
   },
@@ -217,7 +216,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### Fooof is twice as fast without PSD calculcation: 126 +- 6 miliseconds (September 22nd 2021)"
+    "#### Fooof is twice as fast without PSD calculcation: 126 +- 6 miliseconds"
    ],
    "metadata": {}
   },
@@ -252,7 +251,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### Fooof is slow if the spectral resolution is high: 418 +- 3 miliseconds (September 22nd 2021)"
+    "#### Fooof is slow if the spectral resolution is high: 418 +- 3 miliseconds"
    ],
    "metadata": {}
   },
