Edit description, correct spelling

--- a/Fig3.ipynb
+++ b/Fig3.ipynb
@@ -109,7 +109,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### b) Load real data and fit fooof different freq ranges"
+    "#### b) Load empirical data of dataset 1 and fit fooof different freq ranges"
    ],
    "metadata": {}
   },
