--- a/Fig6.ipynb
+++ b/Fig6.ipynb
@@ -108,7 +108,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### a) Simulate signal with three iscillations and fit"
+    "#### a) Simulate signal with three oscillations and fit"
    ],
    "metadata": {}
   },
