Remove notch filter at 50 Hz

--- a/Fig8.ipynb
+++ b/Fig8.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "source": [
     "from pathlib import Path\n",
     "\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "source": [
     "yaml_file = open('params.yml')\n",
     "parsed_yaml_file = yaml.load(yaml_file, Loader=yaml.FullLoader)\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "source": [
     "# Load data\n",
     "data_path = \"../data/Fig8/\"\n",
@@ -66,6 +66,8 @@
     "ch9 = \"STN_R01\"\n",
     "sub5.pick_channels([ch5])\n",
     "sub9.pick_channels([ch9])\n",
+    "# here it is fine to notch filter at 50 Hz because the filter does not\n",
+    "# cause a dip in the PSD\n",
     "filter_params = {\"freqs\": np.arange(50, 601, 50),\n",
     "                 \"notch_widths\": 0.1,\n",
     "                 \"method\": \"spectrum_fit\"}\n",
@@ -148,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "source": [
     "# %% Fooof fit\n",
     "freq_range = [1, 95]\n",
@@ -198,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "source": [
     "# straight \"fit\"\n",
     "DeltaX = np.log10(np.diff(freq_range)[0])\n",
@@ -233,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "source": [
     "# get timeseries data\n",
     "get_data = dict(start=sample_rate//2, stop=sample_rate*180,\n",
@@ -295,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "source": [
     "panel_labels = dict(x=0, y=1.02, fontsize=panel_fontsize,\n",
     "                    fontdict=dict(fontweight=\"bold\"))\n",
@@ -313,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "source": [
     "fig, ax = plt.subplots(2, 2, figsize=(fig_width, 5), sharey=\"row\")\n",
     "\n",
